manifests/grafana/ingress/virtual-service.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - grafana.dev.innovatshub.com
  gateways:
    - istio-system/innovatshub
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana
            port:
              number: 80
